# circpp

./: .gitignore  CMakeLists.txt  README.md  config.status  syslog  syslog.CRASH
inc/: CMakeLists.txt  act.h  alias.h  ban.h  boards.h  class.h  cmake_install.cmake  comm.h  conf.h  conf.h.in  config.h  constants.h  db.h  fight.h  future_parse.h  handler.h  house.h  interpreter.h  limits_c.h  mail.h  mob_future.h  object_future.h  objsave.h  olc.h  room_future.h  shop.h  shop_future.h  spec_procs.h  spells.h  structs.h  sysdep.h  utils.h  zone_future.h
lib/etc/: players  time
lib/plrobjs/K-O/: otto.objs
log/: badpws  errors  godcmds  newplayers  restarts  syslog.  syslog.+1
src/: '  CMakeLists.txt  Makefile  act.comm.c  act.comm.cpp  act.informative.cpp  act.item.c  act.item.cpp  act.movement.cpp  act.offensive.cpp  act.other.c  act.other.cpp  act.social.cpp  act.wizard.cpp  alias.cpp  ban.cpp  bitmask.h  boards.c  boards.cpp  castle.cpp  class.cpp  comm.c  comm.cpp  comm.h  config.cpp  constants.c  db.cpp  fight.c  fight.cpp  graph.cpp  handler.c  handler.cpp  handler.h  house.cpp  interpreter.c  interpreter.cpp  limits.c  limits.cpp  magic.c  magic.cpp  (+23 more)
src/util/: CMakeLists.txt  Makefile  autowiz.c  listrent.cpp  play2to3.c  play2to3.cpp  shopconv.cpp  wld2html.cpp
